Add scroll to open history on mobile

--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
     <title>Calculator</title>
 
-    <link rel="stylesheet" type="text/css" href="ressources/materialize.min.css">
     <script src="ressources/jquery-3.3.1.min.js"></script>
-    <script src="ressources/materialize.min.css"></script>
+
+    <link rel="stylesheet" type="text/css" href="ressources/materialize.min.css">
+    <script src="ressources/materialize.min.js"></script>
 
     <link rel="stylesheet" type="text/css" href="ressources/index.css">
     <script src="ressources/index.js"></script>
@@ -99,8 +101,13 @@
                         <span>)</span>
                     </div>
                 </div>
-                <div class="button-input">
-                    <span>/</span>
+                <div class="parenthesis">
+                    <div class="button-input">
+                        <span>/</span>
+                    </div>
+                    <div class="button-input">
+                        <span>%</span>
+                    </div>
                 </div>
                 <div class="button-input">
                     <span>*</span>
