Add mimify CSS and JS + favicon + htaccess + optimize page speed load

--- a/index.html
+++ b/index.html
@@ -5,15 +5,13 @@
     <meta charset="UTF-8">
     <title>Calculator</title>
 
-    <script src="ressources/jquery-3.3.1.min.js"></script>
-
-    <link rel="stylesheet" type="text/css" href="ressources/materialize.min.css">
-    <script src="ressources/materialize.min.js"></script>
-
-    <link rel="stylesheet" type="text/css" href="ressources/index.css">
-    <script src="ressources/index.js"></script>
+    <link rel="icon" href="favicon.ico" type="image/x-icon"/>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="stylesheet" type="text/css" href="ressources/materialize.min.css">
+    <link rel="stylesheet" type="text/css" href="ressources/index.min.css">
 
 </head>
 
@@ -125,6 +123,11 @@
     </div>
 
 </div>
+
+<script src="ressources/jquery-3.3.1.min.js"></script>
+<script async src="ressources/materialize.min.js"></script>
+
+<script async src="ressources/index.min.js"></script>
 
 </body>
 
