--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" type="text/css" href="ressources/materialize.min.css">
-    <link rel="stylesheet" type="text/css" href="ressources/index.min.css">
+    <link rel="stylesheet" type="text/css" href="ressources/index.css">
 
 </head>
 
@@ -126,8 +126,9 @@
 
 <script src="ressources/jquery-3.3.1.min.js"></script>
 <script async src="ressources/materialize.min.js"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-74712385-7"></script>
 
-<script async src="ressources/index.min.js"></script>
+<script async src="ressources/index.js"></script>
 
 </body>
 
