--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" type="text/css" href="ressources/materialize.min.css">
     <link rel="stylesheet" type="text/css" href="ressources/index.css">
 
+    <meta name="google-site-verification" content="Wj7q88uqcL-YBazin9bAcN5BD8_tlu4N4Aqm8NCHFxc" />
+
 </head>
 
 <body>
