Add Google Analytics

--- a/index.html
+++ b/index.html
@@ -128,7 +128,16 @@
 
 <script src="ressources/jquery-3.3.1.min.js"></script>
 <script async src="ressources/materialize.min.js"></script>
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-74712385-7"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-74712385-7');
+</script>
 
 <script async src="ressources/index.js"></script>
 
