Update domain name

--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
     <link rel="stylesheet" type="text/css" href="ressources/materialize.min.css">
     <link rel="stylesheet" type="text/css" href="ressources/index.css">
 
-    <meta name="google-site-verification" content="Wj7q88uqcL-YBazin9bAcN5BD8_tlu4N4Aqm8NCHFxc" />
+    <meta content="t3RzZEGL4FTpLJFO7njCG9sAbS8QbhkXT303M2GGuoI" name="google-site-verification"/>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-74712385-7"></script>
 
 </head>
 
@@ -128,16 +131,6 @@
 
 <script src="ressources/jquery-3.3.1.min.js"></script>
 <script async src="ressources/materialize.min.js"></script>
-
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-74712385-7"></script>
-<script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'UA-74712385-7');
-</script>
 
 <script async src="ressources/index.js"></script>
 
